# tytus-cli

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  install.ps1  install.sh  llm-docs.md  wrangler.jsonc
.agents/skills/tytus/: SKILL.md
.github/scripts/: render_homebrew_formula.py
.github/workflows/: homebrew.yml  pages.yml  release.yml
auth/: Cargo.toml
auth/src/: device_auth.rs  keychain.rs  lib.rs  login.rs  sentinel.rs
cli/: Cargo.toml
cli/src/: channels.rs  channels_store.rs  cmd_transfer.rs  daemon.rs  lib.rs  main.rs  state.rs  transfer.rs  tunnel_reap.rs  wizard.rs
cli/tests/: disconnect_pidfile.rs  revoke_reaps_daemon.rs
contrib/homebrew/: tytus.rb
core/: Cargo.toml
core/src/: device.rs  error.rs  http.rs  lib.rs  token.rs
dev/: README.md
dev/audits/: 2026-04-20-performance-audit.md  2026-04-20-tray-feature-audit.md
dev/design/: 2026-04-20-24-7-architecture-analysis.md  2026-04-20-unblock-openclaw-channels.md
dev/scripts/: edge-e2e-matrix.sh  verify-edge-bridges.sh
dev/sprints/: 2026-04-20-public-https-per-pod.md  2026-04-20-public-https-phase-2.5-droplet-bridge.md  2026-04-23-per-pod-subdomain.md
docs/: DESIGN-TYTUS-LOPE-TEAMMATES.md  PENTEST-RESULTS-2026-04-12.md  PUBLISHING.md  SECURITY-AUDIT.md  SECURITY-DEEP-AUDIT-2026-04-12.md  SECURITY-HARDENING-2026-04-12.md  SECURITY-TEAMMATES.md  SECURITY.md  SPRINT-2026-04-19-negotiated.md  SPRINT-2026-04-19.md  SPRINT-P1-SHIP-v0.4.0.md  SPRINT-TYTUS-LOPE-TEAMMATES-NEGOTIATED.md  VERIFICATION-2026-04-10.md  WIZARDS.md  file-sharing.md
docs/guides/: INDEX.md  autostart-and-daemon.md  common-use-cases.md  getting-started.md  plans-and-agents.md  troubleshooting.md  use-with-ai-tools.md
mcp/: Cargo.toml
mcp/src/: main.rs  state.rs  tools.rs
pkg/: SIGNING.md  build-pkg.sh
pkg/scripts/: postinstall
scripts/: FLOWS.md  e2e-channels.sh  e2e-flows.sh  e2e-lope-teammate.sh  e2e-multiprocess.sh
tray/: Cargo.toml
tray/src/: error_ui.rs  files.rs  gateway_probe.rs  icon.rs  launcher.rs  main.rs  shared_folders.rs  single_instance.rs  socket.rs  web_server.rs
tray/web/: install.html  tower.html
tray/web/assets/: install.css  install.js  tower.css  tower.js
tunnel/: Cargo.toml
tunnel/src/: lib.rs  monitor.rs  wireguard.rs
tytus_sdk/: __init__.py  __main__.py  adapter.py  bridge_daemon.py  cli.py  identity.py  install.py  lope_bridge.py
tytus_sdk/adapters/: __init__.py  openclaw.py
web/: CNAME  SKILL.md  _headers  _redirects  build.sh  index.html
