[workspace]
resolver = "2"
members = [
    "cli",
    "core",
    "auth",
    "pods",
    "tunnel",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Traylinx <hello@traylinx.com>"]
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "native-tls", "stream"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
zeroize = { version = "1", features = ["derive"] }
keyring = "3"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
dirs = "6"
libc = "0.2"
urlencoding = "2"
boringtun = "0.7"
tun = { version = "0.7", features = ["async"] }
tokio-util = "0.7"
socket2 = "0.5"
x25519-dalek = { version = "2", features = ["static_secrets"] }
