[workspace]
resolver = "2"
members = [
    "cli",
    "core",
    "auth",
    "pods",
    "tunnel",
    "mcp",
    "tray",
]

[workspace.package]
version = "0.6.0-rc.7"
edition = "2021"
authors = ["Traylinx <hello@traylinx.com>"]
license = "MIT"
description = "tytus — CLI for Tytus by Traylinx, your private AI pod driven from any terminal"
homepage = "https://traylinx.com"
repository = "https://github.com/traylinx/tytus-cli"
documentation = "https://github.com/traylinx/tytus-cli#readme"
readme = "README.md"
keywords = ["tytus", "traylinx", "wireguard", "ai", "openai-compatible"]
categories = ["command-line-utilities", "network-programming"]
rust-version = "1.75"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-webpki-roots", "http2", "macos-system-configuration", "stream"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
zeroize = { version = "1", features = ["derive"] }
keyring = { version = "3", features = ["apple-native", "linux-native-sync-persistent", "sync-secret-service", "windows-native"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
dirs = "6"
libc = "0.2"
urlencoding = "2"
boringtun = "0.7"
tun = { version = "0.7", features = ["async"] }
tokio-util = "0.7"
socket2 = "0.5"
x25519-dalek = { version = "2", features = ["static_secrets"] }
inquire = "0.7"
indicatif = "0.17"
console = "0.15"
crossterm = "0.28"
