[package]
name = "atomek-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Tytus private AI pod CLI — connect from any terminal"

[[bin]]
name = "tytus"
path = "src/main.rs"

[dependencies]
atomek-core = { path = "../core" }
atomek-auth = { path = "../auth" }
atomek-pods = { path = "../pods" }
atomek-tunnel = { path = "../tunnel" }

clap = { version = "4", features = ["derive"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dirs.workspace = true
chrono.workspace = true
open = "5"
