[package]
name = "tytus-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Tytus MCP server — expose pod management as tools to any MCP-compatible AI CLI"

[[bin]]
name = "tytus-mcp"
path = "src/main.rs"

[dependencies]
atomek-core = { path = "../core" }
atomek-auth = { path = "../auth" }
atomek-pods = { path = "../pods" }

serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dirs.workspace = true
chrono.workspace = true
reqwest.workspace = true
