[package]
name = "tytus-tray"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Tytus system tray — menu bar icon for managing your private AI pod"

[[bin]]
name = "tytus-tray"
path = "src/main.rs"

[dependencies]
tray-icon = { version = "0.19", features = ["serde"] }
image = { version = "0.25", default-features = false, features = ["png"] }
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
dirs.workspace = true

# macOS: need to run NSApplication event loop
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSRunLoop", "NSDate", "NSString"] }
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSRunningApplication"] }
