[package]
name = "tytus-tray"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Tytus system tray — menu bar icon for managing your private AI pod"

[[bin]]
name = "tytus-tray"
path = "src/main.rs"

[dependencies]
tray-icon = { version = "0.19", features = ["serde"] }
image = { version = "0.25", default-features = false, features = ["png"] }
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
dirs.workspace = true
# tiny_http powers the localhost install wizard (sprint §6 E1). Chosen
# over warp/axum/actix because it's dep-free, std-only, synchronous, and
# under 200KB — we only need 4 endpoints and one SSE stream.
tiny_http = "0.12"
atomek-pods = { path = "../pods" }
atomek-core = { path = "../core" }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

# macOS: need to run NSApplication event loop
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSRunLoop", "NSDate", "NSString"] }
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSRunningApplication"] }
# Grand Central Dispatch wrapper — we marshal tray icon updates from the
# poll thread onto AppKit's main queue so TrayIcon (!Send on macOS) is only
# ever touched from the thread that owns it.
dispatch2 = "0.2"
